{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 22,
  "lineage": "c0deda06-cb89-c227-73bd-4a6cf5efbe18",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "swish_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019332a9eda8dbcc8",
            "domain": "vpc",
            "id": "eipalloc-019332a9eda8dbcc8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-211-20-201.compute-1.amazonaws.com",
            "public_ip": "44.211.20.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "swish_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06780aec3c84e0f8d",
            "domain": "vpc",
            "id": "eipalloc-06780aec3c84e0f8d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-213-228-245.compute-1.amazonaws.com",
            "public_ip": "3.213.228.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "swish_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:internet-gateway/igw-09dfaeee546037333",
            "id": "igw-09dfaeee546037333",
            "owner_id": "451445594773",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swishIGW"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swishIGW"
            },
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "swish_ngw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019332a9eda8dbcc8",
            "connectivity_type": "public",
            "id": "nat-0976a4b9477bdc95d",
            "network_interface_id": "eni-0c33647783a211d5f",
            "private_ip": "10.130.10.187",
            "public_ip": "44.211.20.201",
            "subnet_id": "subnet-019bf7838116ee088",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swishNat"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swishNat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.swish_eip_a",
            "module.vpc.aws_subnet.swishpublic_1a",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "swish_ngw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06780aec3c84e0f8d",
            "connectivity_type": "public",
            "id": "nat-0681a73da0186c628",
            "network_interface_id": "eni-0eb5f2c66e847f762",
            "private_ip": "10.130.15.157",
            "public_ip": "3.213.228.245",
            "subnet_id": "subnet-0a09dcc06b398beaf",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swishNatb"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swishNatb"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.swish_eip_b",
            "module.vpc.aws_subnet.swishpublic_1b",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swish_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:route-table/rtb-0787bef2a4bb3819c",
            "id": "rtb-0787bef2a4bb3819c",
            "owner_id": "451445594773",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0976a4b9477bdc95d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging_swish_Route_A"
            },
            "tags_all": {
              "Name": "staging_swish_Route_A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.swish_eip_a",
            "module.vpc.aws_nat_gateway.swish_ngw_a",
            "module.vpc.aws_subnet.swishpublic_1a",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swish_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:route-table/rtb-02d37375e310fc60b",
            "id": "rtb-02d37375e310fc60b",
            "owner_id": "451445594773",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0976a4b9477bdc95d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging_swish__Route_B"
            },
            "tags_all": {
              "Name": "staging_swish__Route_B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.swish_eip_a",
            "module.vpc.aws_nat_gateway.swish_ngw_a",
            "module.vpc.aws_subnet.swishpublic_1a",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swish_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:route-table/rtb-0c6b0099708524032",
            "id": "rtb-0c6b0099708524032",
            "owner_id": "451445594773",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09dfaeee546037333",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging_swishpub_Route"
            },
            "tags_all": {
              "Name": "staging_swishpub_Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.swish_igw",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swish_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ac2a6e8050dc505",
            "route_table_id": "rtb-0787bef2a4bb3819c",
            "subnet_id": "subnet-07341397e55bc0d50"
          },
          "dependencies": [
            "module.vpc.aws_eip.swish_eip_a",
            "module.vpc.aws_nat_gateway.swish_ngw_a",
            "module.vpc.aws_route_table.swish_private_a",
            "module.vpc.aws_subnet.swish_db_1a",
            "module.vpc.aws_subnet.swishpublic_1a",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swish_db_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032d70f51b8c904bf",
            "route_table_id": "rtb-02d37375e310fc60b",
            "subnet_id": "subnet-0348c502810e55f71"
          },
          "dependencies": [
            "module.vpc.aws_eip.swish_eip_a",
            "module.vpc.aws_nat_gateway.swish_ngw_a",
            "module.vpc.aws_route_table.swish_private_b",
            "module.vpc.aws_subnet.swish_db_1b",
            "module.vpc.aws_subnet.swishpublic_1a",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swish_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ffef38056eb8ba9",
            "route_table_id": "rtb-0787bef2a4bb3819c",
            "subnet_id": "subnet-0da478d677ea4be26"
          },
          "dependencies": [
            "module.vpc.aws_eip.swish_eip_a",
            "module.vpc.aws_nat_gateway.swish_ngw_a",
            "module.vpc.aws_route_table.swish_private_a",
            "module.vpc.aws_subnet.swishprivate_1b",
            "module.vpc.aws_subnet.swishpublic_1a",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swish_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ad109e38c922896",
            "route_table_id": "rtb-0c6b0099708524032",
            "subnet_id": "subnet-019bf7838116ee088"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.swish_igw",
            "module.vpc.aws_route_table.swish_public",
            "module.vpc.aws_subnet.swishpublic_1a",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swish_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2b8131ced1fac04",
            "route_table_id": "rtb-0c6b0099708524032",
            "subnet_id": "subnet-0a09dcc06b398beaf"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.swish_igw",
            "module.vpc.aws_route_table.swish_public",
            "module.vpc.aws_subnet.swishpublic_1b",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tango_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e5ce16178e07d82",
            "route_table_id": "rtb-0787bef2a4bb3819c",
            "subnet_id": "subnet-02d94d22ba5ef5917"
          },
          "dependencies": [
            "module.vpc.aws_eip.swish_eip_a",
            "module.vpc.aws_nat_gateway.swish_ngw_a",
            "module.vpc.aws_route_table.swish_private_a",
            "module.vpc.aws_subnet.swishprivate_1a",
            "module.vpc.aws_subnet.swishpublic_1a",
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swish_db_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:subnet/subnet-07341397e55bc0d50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.130.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07341397e55bc0d50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451445594773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swish_db_1a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swish_db_1a"
            },
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swish_db_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:subnet/subnet-0348c502810e55f71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.130.250.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0348c502810e55f71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451445594773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swish_db_1b"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swish_db_1b"
            },
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swishprivate_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:subnet/subnet-02d94d22ba5ef5917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.130.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d94d22ba5ef5917",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451445594773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swish_private_1a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swish_private_1a"
            },
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swishprivate_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:subnet/subnet-0da478d677ea4be26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.130.150.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da478d677ea4be26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451445594773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swish_private_1b"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swish_private_1b"
            },
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swishpublic_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:subnet/subnet-019bf7838116ee088",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.130.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019bf7838116ee088",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451445594773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swish_public_1a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swish_public_1a"
            },
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swishpublic_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:subnet/subnet-0a09dcc06b398beaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.130.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a09dcc06b398beaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451445594773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "staging_swish_public_1b"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging_swish_public_1b"
            },
            "vpc_id": "vpc-0e80ed18055d2c10a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.swishvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "swishvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:451445594773:vpc/vpc-0e80ed18055d2c10a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.130.0.0/16",
            "default_network_acl_id": "acl-0fa8b4bea50083f9c",
            "default_route_table_id": "rtb-032b7e5ec0560f6ca",
            "default_security_group_id": "sg-05e52c86a86df8fe4",
            "dhcp_options_id": "dopt-0f5ca54a9ca9f4085",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e80ed18055d2c10a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032b7e5ec0560f6ca",
            "owner_id": "451445594773",
            "tags": {
              "Environment": "staging",
              "Name": "Staging swishVPC"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "Staging swishVPC"
            }
          }
        }
      ]
    }
  ]
}